2008-10-30  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
	  src/applet-dialogs.c
	  src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/utils/utils.c
	  src/wireless-security/eap-method-leap.c
	  src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-simple.c
	  src/wireless-security/eap-method-tls.c
	  src/wireless-security/eap-method-ttls.c
	  src/wireless-security/eap-method.c
	  src/wireless-security/wireless-security.c
		- Use 802.1x setting accessors

2008-10-30  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
	  src/applet-dialogs.c
	  src/connection-editor/page-wireless-security.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/utils/utils.c
	  src/wireless-dialog.c
	  src/wireless-security/wireless-security.c
	  src/wireless-security/ws-dynamic-wep.c
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wpa-eap.c
	  src/wireless-security/ws-wpa-psk.c
		- Use wireless security setting accessors

2008-10-29  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
	  src/connection-editor/ip4-routes-dialog.c
	  src/connection-editor/ip4-routes-dialog.h
	  src/connection-editor/page-ip4.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/wireless-dialog.c
		- Use IP4 setting accessors; fix leaks

2008-10-29  Tambet Ingo  <tambet@gmail.com>

	* src/connection-editor/nm-connection-list.c
	src/connection-editor/page-vpn.c
	src/connection-editor/vpn-helpers.c
	src/gconf-helpers/gconf-upgrade.c
	src/gconf-helpers/nma-gconf-connection.c
	src/vpn-password-dialog.c
		- Use VPN setting accessors.

2008-10-28  Dan Williams  <dcbw@redhat.com>

	Patch from Tambet Ingo <tambet@gmail.com>

	* src/applet-device-wifi.c
	  src/applet-dialogs.c
	  src/connection-editor/page-wireless-security.c
	  src/connection-editor/page-wireless.c
	  src/gconf-helpers/gconf-upgrade.c
	  src/utils/utils.c
	  src/wireless-dialog.c
	  src/wireless-security/wireless-security.c